Output pricing file.

--- a/StockQuoteDownloader/appsettings.json
+++ b/StockQuoteDownloader/appsettings.json
@@ -1,3 +1,4 @@
 {
-  "StockListPath":  "c:\\temp\\StockList.txt" 
+  "StockListPath": "c:\\temp\\StockList.txt", 
+  "PriceResultsPath":  "c:\\temp\\PriceResults.csv"
 }
